convert input stream based stuff to URL based data access