@@ -1,7 +1,7 @@
 package de.tudresden.cib.vis.data.multimodel;
 
-import cib.mmaa.multimodel.*;
-import cib.mmaa.multimodel.util.MultimodelResourceFactoryImpl;
+import cib.mm.multimodel.*;
+import cib.mm.multimodel.util.MultimodelResourceFactoryImpl;
 import de.tudresden.cib.vis.data.DataAccessException;
 import de.tudresden.cib.vis.data.DataAccessor;
 import de.tudresden.cib.vis.data.IndexedDataAccessor;
@@ -13,10 +13,12 @@ import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.Resource;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URLConnection;
+import java.net.URLStreamHandler;
 import java.util.*;
 
 public class GenericMultiModelAccessor<K> extends DataAccessor<LinkedObject<K>, Condition<LinkedObject<K>>> {
@@ -24,39 +26,41 @@ public class GenericMultiModelAccessor<K> extends DataAccessor<LinkedObject<K>, 
     private Map<ElementaryModel, IndexedDataAccessor> elementaryModels = new HashMap<ElementaryModel, IndexedDataAccessor>();
     private Collection<LinkedObject<K>> groupedElements = new HashSet<LinkedObject<K>>();
     private ConditionFilter<LinkedObject<K>> filter = new ConditionFilter<LinkedObject<K>>();
+    private URL mmUrl = null;
 
     public GenericMultiModelAccessor(SimplePluginManager pm) {
         EMTypes.pm = pm;
     }
 
     @Override
-    public void read(InputStream inputStream, long size) throws IOException, DataAccessException {
-        MultiModel model = readMultiModelMeta(inputStream);
+    public void read(URL url) throws IOException, DataAccessException {
+        MultiModel model = readMultiModelMeta(url);
         LinkModel firstLinkModel = model.getLinkModels().get(0);
         for (ElementaryModel elementaryModel : firstLinkModel.getLinkedModels()) readElementaryModel(elementaryModel);
         ElementaryModel firstElementaryModel = model.getElementaryModels().get(0);
         groupBy(firstElementaryModel, firstLinkModel);
     }
 
-    public void read(InputStream inputStream, long size, LMCondition linkModelCondition, EMCondition keyModelCondition, EMCondition... requiredModelConditions) throws IOException, DataAccessException {
-        MultiModel multiModel = readMultiModelMeta(inputStream);
+    public void read(URL url, LMCondition linkModelCondition, EMCondition keyModelCondition, EMCondition... requiredModelConditions) throws IOException, DataAccessException {
+        MultiModel multiModel = readMultiModelMeta(url);
         LinkModel linkModel = getLinkModel(linkModelCondition, multiModel.getLinkModels());
         ElementaryModel keyModel = getElementaryModels(multiModel, keyModelCondition, requiredModelConditions);
         groupBy(keyModel, linkModel);
     }
 
-    public void read(InputStream inputStream, long size, EMCondition keyModelCondition, EMCondition... requiredModelConditions) throws IOException, DataAccessException {
-        MultiModel multiModel = readMultiModelMeta(inputStream);
+    public void read(URL mmUrl, EMCondition keyModelCondition, EMCondition... requiredModelConditions) throws IOException, DataAccessException {
+        this.mmUrl = mmUrl;
+        MultiModel multiModel = readMultiModelMeta(mmUrl);
         LinkModel firstLinkModel = multiModel.getLinkModels().get(0);
         ElementaryModel keyModel = getElementaryModels(multiModel, keyModelCondition, requiredModelConditions);
         groupBy(keyModel, firstLinkModel);
     }
 
-    private MultiModel readMultiModelMeta(InputStream inputStream) throws IOException {
+    private MultiModel readMultiModelMeta(URL url) throws IOException {
         MultimodelPackage.eINSTANCE.getClass();
         Resource.Factory resourceFactory = new MultimodelResourceFactoryImpl();
-        Resource resource = resourceFactory.createResource(URI.createURI("inputstream://fake.resource.uri"));
-        resource.load(inputStream, null);
+        Resource resource = resourceFactory.createResource(URI.createURI(url.toString()));
+        resource.load(null);
         return (MultiModel) resource.getContents().get(0);
     }
 
@@ -76,11 +80,38 @@ public class GenericMultiModelAccessor<K> extends DataAccessor<LinkedObject<K>, 
         return keyModelCandidates.get(0);
     }
 
-    private InputStream getElementaryModelInputStream(ElementaryModel elementaryModel) throws IOException, DataAccessException {
+    private URL getElementaryModelUrl(final ElementaryModel elementaryModel) throws IOException, DataAccessException  {
         if (elementaryModel instanceof UriElementaryModel) {
-            return new URL(((UriElementaryModel) elementaryModel).getUri()).openStream();  // TODO: handle relative URIs
+            try {
+                java.net.URI absolute = (mmUrl != null && !new java.net.URI(((UriElementaryModel) elementaryModel).getUri()).isAbsolute()) ?
+                        mmUrl.toURI().resolve(new java.net.URI(((UriElementaryModel) elementaryModel).getUri())):
+                        new java.net.URI(((UriElementaryModel) elementaryModel).getUri());
+                return absolute.toURL();
+            } catch (URISyntaxException e) {
+                throw new DataAccessException("could not parse URI", e);
+            }
         } else if (elementaryModel instanceof EmbeddedElementaryModel) {
-            return new ByteArrayInputStream(((EmbeddedElementaryModel) elementaryModel).getData());
+            return new URL("test","aadsf",23,"asdf", new URLStreamHandler(){
+                @Override
+                protected URLConnection openConnection(URL u) throws IOException {
+                    return new URLConnection(u) {
+                        @Override
+                        public void connect() throws IOException {
+
+                        }
+
+                        @Override
+                        public InputStream getInputStream() throws IOException {
+                            return new ByteArrayInputStream(((EmbeddedElementaryModel) elementaryModel).getData());
+                        }
+
+                        @Override
+                        public int getContentLength() {
+                            return ((EmbeddedElementaryModel) elementaryModel).getData().length;
+                        }
+                    };
+                }
+            });
         } else {
             throw new DataAccessException("unknown elementary model type, don't know how to access");
         }
@@ -93,8 +124,8 @@ public class GenericMultiModelAccessor<K> extends DataAccessor<LinkedObject<K>, 
         if (emType == null) throw new DataAccessException("no matching accessor found for " + typeCode);
         else {
             IndexedDataAccessor accessor = emType.createAccessor();
-            InputStream elementaryModelInputStream = getElementaryModelInputStream(elementaryModel);
-            accessor.read(elementaryModelInputStream, 0);
+            URL elementaryModelUrl = getElementaryModelUrl(elementaryModel);
+            accessor.read(elementaryModelUrl);
             accessor.index();
             elementaryModels.put(elementaryModel, accessor);
         }
@@ -133,11 +164,6 @@ public class GenericMultiModelAccessor<K> extends DataAccessor<LinkedObject<K>, 
             trackMap.get(key).addLink(resolvedLink);
         }
         for (LinkedObject<K> linkedObject : trackMap.values()) groupedElements.add(linkedObject);
-    }
-
-    @Override
-    public void readFromFolder(File directory) throws DataAccessException { // TODO: move out of DataAccessor interface! plus: unravel access (folder, file, stream) and link resolution logic
-        throw new UnsupportedOperationException();
     }
 
     @Override
